--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,71 +1,29 @@
-#about {
-  margin-top: 0;
-  padding: 1rem;
-  position: relative;
-  bottom: 0;
-  /* left: 10em; */
-  /* height: 15rem; */
-  width: 100%;
-  font-size: 15px;
+#right {
+  color: rgb(174, 179, 179);
   text-align: center;
-  color: rgb(174, 179, 179);
-  display: flex;
-  flex-wrap: wrap;
-}
-h4 {
-  color: rgb(174, 179, 179);
-}
-.mb-0 {
-  text-align: start;
+  align-content: center;
+  bottom: 0;
+  position: absolute;
+  margin-top: 1rem;
+  height: auto;
+  width: auto;
 }
 
-.icon {
-  margin-right: 1rem;
+.link {
   color: rgb(174, 179, 179);
-}
-
-.icon2 {
-  margin-right: 1rem;
-  margin-left: 2rem;
-}
-
-a {
-  color: rgb(174, 179, 179);
-}
-
-.links a {
-  text-decoration: none;
-  color: rgb(174, 179, 179);
-}
-
-.click {
-  color: rgb(71, 69, 69);
+  cursor: pointer;
+  ;
 }
 
 @media screen and (max-width: 600px) {
-  #about {
-    font-size: 11px;
-    float: left;
-    bottom: .5rem !important;
-    padding-right: 0 !important;
-  }
-  #column {
-    width: 32vw !important;
-  }
-
-  h4 {
-    font-size: 13px !important;
-  }
-
-  .icon2 {
-    margin-left: auto;
-    margin-right: .5rem;
+  #right {
+    width: auto;
+    bottom: 3rem !important;
   }
 }
 
 @media screen and (min-width: 600px) {
-  #about {
+  #right {
     transition: all 0.6s ease;
-    left: 0%
   }
 }
