changed title color to white

--- a/client/src/Pages/AboutUs/AboutUs.css
+++ b/client/src/Pages/AboutUs/AboutUs.css
@@ -23,7 +23,7 @@ body {
 }
 
 #aboutUsHeader {
-  color: #ffcc00;
+  color: white;
   font-weight: bolder;
   text-shadow: grey;
   align-items: center;
