--- a/client/src/components/BackgroundVideo/BackgroundVideo.css
+++ b/client/src/components/BackgroundVideo/BackgroundVideo.css
@@ -5,6 +5,8 @@
     position: fixed;
     top: 0;
     left: 0;
+    filter: brightness(65%);
+    -webkit-filter: brightness(65%);
 }
 
 @media (min-aspect-ratio: 16/9) {
