--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -2,8 +2,7 @@
   text-align: center;
   align-content: center;
   bottom: 0;
-  position: absolute;
-  left: 15rem;
+  position: relative;
   margin-top: 1rem;
   height: auto;
   width: auto;
