--- a/client/src/Pages/AboutUs/AboutUs.css
+++ b/client/src/Pages/AboutUs/AboutUs.css
@@ -14,11 +14,8 @@ body {
 .aboutUsPgContent {
   position: absolute;
   height: 100%;
-  width: calc(100% - 5rem);
+  width: calc(100%);
   left: 5rem;
-  padding: 0;
-  align-items: center;
-  justify-content: center;
   color: white;
 }
 
@@ -27,7 +24,6 @@ body {
   font-weight: bolder;
   text-shadow: grey;
   align-items: center;
-  justify-content: center;
   text-justify: center;
 	font-size: 56px;
 	text-shadow: 0px 4px 4px #282828;
@@ -37,7 +33,7 @@ body {
   color: white;
   text-shadow: 0px 4px 4px #282828;
   display: flex;
-  align-items: center;
+  align-items: justify;
   justify-content: center;
 }
 
