fixed some css to make about us responsive

--- a/client/src/Pages/AboutUs/AboutUs.css
+++ b/client/src/Pages/AboutUs/AboutUs.css
@@ -11,13 +11,13 @@ body {
   height: 100%;
 }
 
-.aboutUsPgContent {
+/* .aboutUsPgContent {
   position: absolute;
   height: 100%;
   width: calc(100%);
   left: 5rem;
   color: white;
-}
+} */
 
 #aboutUsHeader {
   color: white;
