--- a/client/src/components/ControlledCarousel/ControlledCarousel.css
+++ b/client/src/components/ControlledCarousel/ControlledCarousel.css
@@ -11,18 +11,33 @@ html, body {
   font-size: 16px;
   font-family: 'Roboto Slab', serif;
   text-align: center;
-  color:gray;
+  color: gray;
   -webkit-text-stroke: 1px #282828;
-	text-shadow: 0px 4px 4px #282828;
+  text-shadow: 0px 4px 4px #282828;
 }
 
 #WhoWeAre {
   margin-bottom: 10%;
-  color:grey;
+  color: grey;
   text-shadow: -1px -1px 0 #000
 }
+
 #Carousel {
   align-items: center;
   justify-content: center;
   color: gray;
+}
+
+#Title {
+  display: block;
+  padding: 30px;
+  color: white;
+}
+
+/* large screens */
+
+@media screen and (min-width: 600px) {
+  #Title {
+    width: 500px;
+  }
 }
