--- a/client/src/components/LimitBox/LimitBox.css
+++ b/client/src/components/LimitBox/LimitBox.css
@@ -1,12 +1,8 @@
-* {
-	font-family: 'Roboto Slab', serif;
-}
-
-form {
+/* form {
 	margin-left: auto;
 	margin-right: auto;
 	position: center;
-}
+} */
 
 /* Full-width inputs */
 
@@ -35,24 +31,25 @@ button:hover {
 	opacity: 0.8;
 }
 
-/* Center the avatar image inside this container */
-
-.imgcontainer {
-	text-align: center;
-	margin: 24px 0 12px 0;
-}
-
-/* Avatar image */
-
-img.avatar {
-	width: 40%;
-	border-radius: 50%;
-}
-
 /* Add padding to containers */
 
 #limitBoxCont {
 	text-align: center;
+}
+
+/* small screens */
+
+@media screen and (max-width: 600px) {
+	#btnPosition {
+		display: flex;
+		justify-content: center;
+	}
+	#amountSpace {
+		margin-right: 10px;
+	}
+	#totalSpace {
+		margin-right: 15px;
+	}
 }
 
 /* Change styles for span and cancel button on extra small screens */
