--- a/client/src/Pages/Leaderboard/Leaderboard.css
+++ b/client/src/Pages/Leaderboard/Leaderboard.css
@@ -53,6 +53,11 @@ body {
   border-radius: 20px !important;
 }
 
+.tableScroll {
+  height: 100px;
+  overflow: scroll;
+}
+
 /* small screens */
 
 @media screen and (max-width: 600px) {
